--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.cats_production</groupId>
-    <artifactId>film-chooser</artifactId>
+    <artifactId>filmDTO-chooser</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>film-chooser</name>
-    <description>film-chooser</description>
+    <name>filmDTO-chooser</name>
+    <description>filmDTO-chooser</description>
     <properties>
         <java.version>17</java.version>
     </properties>
